--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -7,11 +7,12 @@ server {
         server_name {{ nginx_server_name }};
 
         location / {
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ /index.php?q=$uri&$args;
         }
 
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
             fastcgi_pass unix:{{ nginx_php_fpm_sock_path }};
+            include fastcgi_params;
         }
 }
